# rak

./: .cursorrules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  QUICK_START_GCLOUD.md  README.md  README_TESTING.md  SECURITY.md  config.test.toml  config.toml.example
.cargo/: audit.toml
crates/rak-agent/: Cargo.toml
crates/rak-agent/src/: builder.rs  lib.rs  llm_agent.rs
crates/rak-agent/src/workflow/: loop_agent.rs  mod.rs  parallel.rs  sequential.rs
crates/rak-artifact/: Cargo.toml
crates/rak-artifact/src/: filesystem.rs  lib.rs  memory.rs  service.rs
crates/rak-core/: Cargo.toml
crates/rak-core/src/: config.rs  content.rs  error.rs  lib.rs  (+2 more)
crates/rak-database-tools/: Cargo.toml
crates/rak-database-tools/src/: config.rs  lib.rs  postgres.rs  sqlite.rs
crates/rak-macros/: Cargo.toml
crates/rak-macros/src/: lib.rs
crates/rak-mcp/: Cargo.toml
crates/rak-mcp/src/: lib.rs  tool_wrapper.rs  toolset.rs
crates/rak-memory/: Cargo.toml
crates/rak-memory/src/: inmemory.rs  lib.rs  service.rs
crates/rak-model/: Cargo.toml
crates/rak-model/src/: gemini.rs  lib.rs  openai.rs  types.rs
crates/rak-openapi/: Cargo.toml
crates/rak-openapi/src/: auth.rs  error.rs  lib.rs  rest_api_tool.rs  toolset.rs  types.rs
crates/rak-runner/: Cargo.toml
crates/rak-runner/src/: context.rs  lib.rs  runner.rs
crates/rak-server/: Cargo.toml
crates/rak-server/src/: invocation_tracker.rs  rest.rs  types.rs  websocket.rs  ws_types.rs
crates/rak-session/: Cargo.toml
crates/rak-session/src/: inmemory.rs  lib.rs  types.rs
crates/rak-session/src/database/: mod.rs  models.rs  postgres.rs  sqlite.rs
crates/rak-telemetry/: Cargo.toml
crates/rak-tool/: Cargo.toml
crates/rak-web-tools/: Cargo.toml
crates/zdk-agent/: Cargo.toml
crates/zdk-agent/src/: builder.rs  builder_common.rs  lib.rs  llm_agent.rs  testing.rs  utils.rs
crates/zdk-agent/src/workflow/: loop_agent.rs  parallel.rs  sequential.rs
crates/zdk-artifact/: Cargo.toml
crates/zdk-artifact/src/: filesystem.rs  lib.rs
crates/zdk-core/: Cargo.toml
crates/zdk-core/src/: auth.rs  capabilities.rs  config.rs  content.rs  context.rs  error.rs  event.rs  extensions.rs  lib.rs  traits.rs
crates/zdk-core/src/providers/: factory.rs  mod.rs  provider.rs  provider_tests.rs
crates/zdk-core/src/providers/gemini/: auth.rs  mod.rs  provider.rs  types.rs
crates/zdk-core/src/providers/openai/: mod.rs  provider.rs  types.rs
crates/zdk-database-tools/: Cargo.toml
crates/zdk-database-tools/src/: config.rs  lib.rs  postgres.rs  sqlite.rs  types.rs
crates/zdk-macros/: Cargo.toml
crates/zdk-macros/src/: lib.rs
crates/zdk-mcp/: Cargo.toml
crates/zdk-mcp/src/: client.rs  connection.rs  lib.rs  tool_wrapper.rs  toolset.rs  types.rs
crates/zdk-memory/: Cargo.toml
crates/zdk-memory/src/: inmemory.rs  lib.rs  service.rs
crates/zdk-model/: Cargo.toml
crates/zdk-model/src/: builder.rs  extensions.rs  factory.rs  gemini.rs  lib.rs  openai.rs  types.rs
crates/zdk-openapi/: Cargo.toml
crates/zdk-openapi/src/: auth.rs  error.rs  lib.rs  parser.rs  rest_api_tool.rs  toolset.rs  types.rs
crates/zdk-runner/: Cargo.toml
crates/zdk-runner/src/: context.rs  lib.rs  runner.rs
crates/zdk-server/: Cargo.toml
crates/zdk-server/src/: invocation_tracker.rs  lib.rs  rest.rs  types.rs  websocket.rs  ws_types.rs
crates/zdk-session/: Cargo.toml
crates/zdk-telemetry/: Cargo.toml
crates/zdk-telemetry/src/: lib.rs  spans.rs  tracer.rs
crates/zdk-tool/: Cargo.toml
crates/zdk-tool/src/: context.rs  function_tool.rs  lib.rs  schema.rs
crates/zdk-tool/src/builtin/: calculator.rs  echo.rs  mod.rs
crates/zdk-web-tools/: Cargo.toml
crates/zdk-web-tools/src/: gemini_google_search.rs  gemini_url_context.rs  lib.rs  web_scraper.rs
examples/: README.md  artifact_usage.rs  common.rs  config_usage.rs  database_session.rs  database_tools_usage.rs  embedding_usage.rs  gemini_gcloud_usage.rs  mcp_toolset_usage.rs  memory_usage.rs  multi_capability_usage.rs  openai_usage.rs  openapi_usage.rs  provider_discovery.rs  quickstart.rs  server_usage.rs  telemetry_usage.rs  tool_usage.rs  web_tools_usage.rs  websocket_usage.rs  workflow_agents.rs
plans/: 20251119_1400_IMPLEMENTATION_SUMMARY.md  20251119_1410_PROJECT_SCOPE.md  20251119_1420_TEST_SUMMARY.md  20251119_1425_TESTING_GUIDE.md  20251119_1430_DOCUMENTATION_GUIDELINES.md  20251119_1435_DOCUMENTATION_INDEX.md  20251119_1500_TOOL_SYSTEM.md  20251119_1510_PHASE2_SUMMARY.md  20251119_1520_WORKFLOW_AGENTS.md  20251119_1530_PHASE3_SUMMARY.md  20251119_1600_STORAGE_PROVIDERS.md  20251119_1610_PHASE4_COMPLETE.md  20251119_1700_MEMORY_SERVICE.md  20251119_1710_PHASE5_COMPLETE.md  20251119_1800_WEBSOCKET_SUPPORT.md  20251119_1810_PHASE6_COMPLETE.md  20251119_1900_OBSERVABILITY.md  20251119_1910_PHASE7_COMPLETE.md  20251119_2000_OPENAPI_TOOL_GENERATOR_DESIGN.md  20251119_2010_PYTHON_OPENAPI_ANALYSIS.md  20251119_2020_PHASE8.1_COMPLETE.md  20251119_2030_OAUTH2_IMPLEMENTATION_PLAN.md  20251119_2100_WEB_TOOLS_DESIGN.md  20251119_2130_PHASE8.3_WEB_TOOLS_COMPLETE.md  20251119_2140_PHASE8.3_FINAL.md  20251119_2150_API_KEY_SECURITY.md  20251119_2200_TESTING_AND_CONFIG.md  20251119_2210_CONFIG_MIGRATION.md  20251119_2220_CONFIG_SYSTEM_SUMMARY.md  20251120_1600_OPENAI_MODEL_IMPLEMENTATION.md  20251121_1700_GCLOUD_AUTH_TESTING.md  20251121_1730_GCLOUD_AUTH_EXAMPLES_COMPLETE.md  20251121_1745_TESTING_RESULTS.md  20251121_1800_GCLOUD_AUTH_IMPLEMENTATION_SUMMARY.md  20251121_1830_AUTH_ABSTRACTION_DESIGN.md  20251121_1845_AUTH_ABSTRACTION_CORE_COMPLETE.md  20251122_0100_CONFIG_DRIVEN_EXAMPLES_COMPLETE.md  20251122_PHASE8.6_DATABASE_MCP_COMPLETE.md  20251123_1200_PHASE9_ADVANCED_OBSERVABILITY_DESIGN.md  20251123_1210_PROFILING_DESIGN.md  (+5 more)
scripts/: README.md  test_examples.sh
t0/: README.md  after.py  after_http.py  docker-compose.yml  env.example
t0/config/: haiku_system.txt  tensorzero.toml
tests/: common.rs  integration_test.rs  openapi_usage_test.rs  provider_integration_test.rs  tool_test.rs  workflow_agents_test.rs
tests/e2e/: basic_flow.rs
(+17 files in other folders)
