[workspace]
resolver = "2"
members = [
    "crates/zdk-core",
    "crates/zdk-model",
    "crates/zdk-session",
    "crates/zdk-agent",
    "crates/zdk-runner",
    "crates/zdk-server",
    "crates/zdk-tool",
    "crates/zdk-macros",
    "crates/zdk-artifact",
    "crates/zdk-memory",
    "crates/zdk-telemetry",
    "crates/zdk-openapi",
    "crates/zdk-web-tools",
    "crates/zdk-database-tools",
    "crates/zdk-mcp",
]

[package]
name = "zdk-workspace"
version.workspace = true
edition.workspace = true

[dependencies]
zdk-core = { path = "crates/zdk-core" }
zdk-model = { path = "crates/zdk-model" }
zdk-session = { path = "crates/zdk-session" }
zdk-agent = { path = "crates/zdk-agent" }
zdk-runner = { path = "crates/zdk-runner" }
zdk-server = { path = "crates/zdk-server" }
zdk-tool = { path = "crates/zdk-tool" }
zdk-artifact = { path = "crates/zdk-artifact" }
zdk-memory = { path = "crates/zdk-memory" }
zdk-telemetry = { path = "crates/zdk-telemetry" }
zdk-openapi = { path = "crates/zdk-openapi" }
zdk-web-tools = { path = "crates/zdk-web-tools" }
zdk-database-tools = { path = "crates/zdk-database-tools" }
zdk-mcp = { path = "crates/zdk-mcp" }

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tempfile = "3.8"
tower = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-tungstenite = { workspace = true }

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[[test]]
name = "openapi_usage_test"
path = "tests/openapi_usage_test.rs"

[[example]]
name = "quickstart"
path = "examples/quickstart.rs"

[[example]]
name = "tool_usage"
path = "examples/tool_usage.rs"

[[example]]
name = "workflow_agents"
path = "examples/workflow_agents.rs"

[[example]]
name = "web_tools_usage"
path = "examples/web_tools_usage.rs"

[[example]]
name = "config_usage"
path = "examples/config_usage.rs"

[[example]]
name = "gemini_gcloud_usage"
path = "examples/gemini_gcloud_usage.rs"

# Exclude common.rs from being treated as an example
# (it's a shared module included by other examples, not a standalone example)
# We use a nonexistent feature to effectively disable it
[[example]]
name = "common"
path = "examples/common.rs"
required-features = ["__nonexistent_feature__"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["ZVectorLabs.com"]
license = "Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.17"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-tungstenite = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "json"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# OpenAPI
openapiv3 = "2.0"
serde_yaml = "0.9"
url = "2.5"

# Config
config = "0.14"
dotenvy = "0.15"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
opentelemetry = "0.25"
opentelemetry_sdk = "0.25"
tracing-opentelemetry = "0.26"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Testing
mockall = "0.13"

# Schema generation
schemars = "0.8"

# Math evaluation
meval = "0.2"

# Proc macros
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

# Encoding
base64 = "0.22"

# Concurrent collections
dashmap = "6.0"

