[package]
name = "rak-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rak-core = { path = "../rak-core" }
rak-session = { path = "../rak-session" }
rak-tool = { path = "../rak-tool" }
rak-telemetry = { path = "../rak-telemetry" }
async-trait = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

