[package]
name = "rak-database-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
rak-core = { path = "../rak-core" }
rak-tool = { path = "../rak-tool" }
sqlx = { version = "0.8", features = ["postgres", "sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"

