[package]
name = "rak-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rak-core = { path = "../rak-core" }
rak-session = { path = "../rak-session" }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

