[package]
name = "rak-model"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rak-core = { path = "../rak-core" }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
anyhow = { workspace = true }

[features]
default = ["gemini"]
gemini = []
openai = []

