[package]
name = "rak-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rak-core = { path = "../rak-core" }
rak-session = { path = "../rak-session" }
rak-runner = { path = "../rak-runner" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }

