[package]
name = "rak-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rak-core = { path = "../rak-core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, optional = true }
tokio = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[features]
default = []
sqlite = ["sqlx", "sqlx/sqlite", "sqlx/runtime-tokio-rustls", "sqlx/chrono"]
postgres = ["sqlx", "sqlx/postgres", "sqlx/runtime-tokio-rustls", "sqlx/chrono"]

