[package]
name = "zdk-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zdk-core = { path = "../zdk-core" }
zdk-session = { path = "../zdk-session" }
zdk-tool = { path = "../zdk-tool" }
zdk-telemetry = { path = "../zdk-telemetry" }
async-trait = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

