[package]
name = "zdk-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
dashmap = { workspace = true }
once_cell = "1.19"

# Provider dependencies (all included by default)
reqwest = { workspace = true }
async-stream = { workspace = true }
base64 = { workspace = true }

