[package]
name = "zdk-openapi"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"

[dependencies]
# Core ZDK dependencies
zdk-core = { path = "../zdk-core" }
zdk-tool = { path = "../zdk-tool" }

# OpenAPI parsing
openapiv3 = "2.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# JSON and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# URL handling
url = "2.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tracing
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"

