[package]
name = "zdk-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zdk-core = { path = "../zdk-core" }
zdk-session = { path = "../zdk-session" }
zdk-runner = { path = "../zdk-runner" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }

